# ETL_movies_analysis

./: .gitignore  EDA.ipynb  README.md  dag.py  etl.py  etl_functions.py  functions.py  libs.py  main_dag.py  pyproject.toml
Dags/: movies_ETL.py
dashboard/: Dockerfile  README.md  app.py  requirements.txt  utils.py
dashboard/src/: data_loaders.py  db.py  visualizations.py
data/: movies.db
etl/: __init__.py  api_client.py  main_dag.py  models.py
notebooks/: EDA.ipynb  query_db.ipynb
src/: __init__.py  run_etl.py
src/etl/: api_client.py  database.py  functions.py  main_dag.py  models.py
src/ml/: __init__.py  model.py
src/utils/: __init__.py  utils.py
tests/: test_etl.py  test_sql.py
