[tool.poetry]
name = "etl-movies-analysis"
version = "0.1.0"
description = "ETL pipeline for movie data analysis with ML capabilities"
authors = ["Juan Sanchez <jssa132@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.7.1"
pandas = "^2.0.0"
sqlalchemy = ">=1.4.36,<2.0"
requests = "^2.31.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
mlflow = "^2.8.0"
python-dotenv = "^1.0.0"
seaborn = "^0.13.2"
streamlit = "^1.45.1"
plotly = "^6.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$' 